--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -5,9 +5,10 @@ border:2px solid #53303b;
 border-radius: 10px;
 width: 300px;
 padding: 15px;
-
+height: 400px;
 background-color: #EEEEEE;
 }
+
 .container input{
     border-radius: 50px;
     background: #d5dee7;
